    - Add an "-F" option to force a resolve for a .onion address.  Thanks
      to the AutomapHostsOnResolve option, this is no longer a completely
      silly thing to do.

  o Minor features (other):
    - More unit tests.
    - Warn when using a version of libevent before 1.3b to run a server on
      OSX or BSD: these versions interact badly with userspace threads.

  o Removed features:
    - Removed support for the old binary "version 0" controller protocol.
      This has been deprecated since 0.1.1, and warnings have been issued
      since 0.1.2.  When we encounter a v0 control message, we now send back
      an error and close the connection.
    - Remove the old "dns worker" server DNS code: it hasn't been default
      since 0.1.2.2-alpha, and all the servers seem to be using the new
      eventdns code.

  o Minor bugfixes (portability):
    - Even though Windows is equally happy with / and \ as path separators,
      try to use \ consistently on Windows and / consistently on Unix: it
      makes the log messages nicer.
    - Correctly report platform name on Windows 95 OSR2 and Windows 98 SE.
    - Read resolv.conf files correctly on platforms where read() returns
      partial results on small file reads.

  o Minor bugfixes (directory):
    - Correctly enforce that elements of directory objects do not appear
      more often than they are allowed to appear.
    - When we are reporting the DirServer line we just parsed, we were
      logging the second stanza of the key fingerprint, not the first.
    - When we have k non-v2 authorities in our DirServer config,
      we ignored the last k authorities in the list when updating our
      network-statuses.

  o Minor bugfixes (other):
    - Stop allowing hibernating servers to be "stable" or "fast".
    - Check return values from pthread_mutex functions.
    - Don't save non-general-purpose router descriptors to the disk cache,
      because we have no way of remembering what their purpose was when